[gd_scene load_steps=20 format=3 uid="uid://bb8dxqfu4ah0g"]

[ext_resource type="FontFile" uid="uid://b5ofmvuwbvdxo" path="res://Assets/Fonts/argentum-sans.black.ttf" id="1_f683r"]
[ext_resource type="Script" uid="uid://blhyut2na0wu6" path="res://Popups/create_farm_modal.gd" id="1_n2r1i"]
[ext_resource type="Texture2D" uid="uid://cs5fdrni74shv" path="res://Assets/Icons/camera_icon.png" id="2_n2r1i"]
[ext_resource type="Shader" uid="uid://2vfgwygibjq2" path="res://Scenes/arm_pic.gdshader" id="2_v7blb"]
[ext_resource type="Texture2D" uid="uid://boo5l23scoya1" path="res://Assets/Icons/back_icon.png" id="4_ok0bp"]
[ext_resource type="FontFile" uid="uid://d1hefddkwf7sl" path="res://Assets/Fonts/argentum-sans.vf-regular.ttf" id="4_rn04y"]
[ext_resource type="FontFile" uid="uid://dtg8qxe14m8ef" path="res://Assets/Fonts/argentum-sans.medium.ttf" id="6_ok0bp"]
[ext_resource type="StyleBox" uid="uid://dr025og5g28m0" path="res://Assets/StyleRes/auth_screen.tres" id="7_6gi3p"]
[ext_resource type="FontFile" uid="uid://caw5hde3doeyx" path="res://Assets/Fonts/argentum-sans.semibold.ttf" id="8_poavc"]
[ext_resource type="Texture2D" uid="uid://cjjf0jb8l8kwu" path="res://Assets/Icons/gallery_icon.png" id="9_6gi3p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mlo60"]
bg_color = Color(1, 1, 1, 1)
shadow_color = Color(0, 0, 0, 0.270588)
shadow_size = 15
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ew5j3"]
bg_color = Color(0.969137, 0.969137, 0.969137, 1)
corner_radius_top_left = 300
corner_radius_top_right = 300
corner_radius_bottom_right = 300
corner_radius_bottom_left = 300
corner_detail = 20
shadow_color = Color(0.745585, 0.745579, 0.74558, 1)
shadow_size = 10
anti_aliasing_size = 2.782

[sub_resource type="ShaderMaterial" id="ShaderMaterial_go1vp"]
shader = ExtResource("2_v7blb")
shader_parameter/radius_scale = 1.0
shader_parameter/rounded_corner_top_left = true
shader_parameter/rounded_corner_top_right = true
shader_parameter/rounded_corner_bottom_left = true
shader_parameter/rounded_corner_bottom_right = true
shader_parameter/width = 400.0
shader_parameter/height = 400.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6gi3p"]
bg_color = Color(0.913725, 0.913725, 0.913725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2bk0l"]
content_margin_left = 10.0
bg_color = Color(0.913725, 0.913725, 0.913725, 1)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_poavc"]
content_margin_left = 10.0
bg_color = Color(0.683077, 0.683077, 0.683077, 1)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_owong"]
bg_color = Color(1, 1, 1, 0.729412)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_idi3j"]
bg_color = Color(1, 1, 1, 1)
shadow_color = Color(0, 0, 0, 0.270588)
shadow_size = 15
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abi7b"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10

[node name="CreateFarmModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n2r1i")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mlo60")

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Panel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -419.0
offset_right = 164.0
offset_bottom = -359.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.133196, 0.133196, 0.133196, 1)
theme_override_fonts/font = ExtResource("1_f683r")
theme_override_font_sizes/font_size = 32
text = "Create a farm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel"]
custom_minimum_size = Vector2(400, 679)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -196.0
offset_top = -811.0
offset_right = 204.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ew5j3")

[node name="UploadPictureButton" type="TextureButton" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/Panel"]
custom_minimum_size = Vector2(75, 75)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -53.0
offset_right = 37.5
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n2r1i")
expand_mode = 1

[node name="FarmPicture" type="TextureRect" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/Panel"]
unique_name_in_owner = true
z_index = 2
material = SubResource("ShaderMaterial_go1vp")
custom_minimum_size = Vector2(300, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/Panel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -132.5
offset_bottom = -72.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.133196, 0.133196, 0.133196, 1)
theme_override_fonts/font = ExtResource("4_rn04y")
theme_override_font_sizes/font_size = 16
text = "Upload a farm picture
(Optional)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("6_ok0bp")
text = "Farm name"

[node name="FarmName" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_6gi3p")
theme_override_styles/normal = SubResource("StyleBoxFlat_2bk0l")

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("6_ok0bp")
text = "Crop type"

[node name="CropType" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_6gi3p")
theme_override_styles/normal = SubResource("StyleBoxFlat_2bk0l")

[node name="Label3" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("6_ok0bp")
text = "Description"

[node name="Description" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_6gi3p")
theme_override_styles/normal = SubResource("StyleBoxFlat_2bk0l")

[node name="Label4" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("6_ok0bp")
theme_override_font_sizes/font_size = 22
text = "GPS Location"
vertical_alignment = 2

[node name="Label6" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("6_ok0bp")
theme_override_font_sizes/font_size = 20
text = "Longitude"

[node name="LongtitudeLine" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2" groups=["MeterValuesLine"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0.396889, 0.396889, 0.396889, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_6gi3p")
theme_override_styles/read_only = SubResource("StyleBoxFlat_poavc")
theme_override_styles/normal = SubResource("StyleBoxFlat_2bk0l")
editable = false

[node name="Label5" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("6_ok0bp")
theme_override_font_sizes/font_size = 20
text = "Latitude"

[node name="LatitudeLine" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2" groups=["MeterValuesLine"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_uneditable_color = Color(0.396889, 0.396889, 0.396889, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_6gi3p")
theme_override_styles/read_only = SubResource("StyleBoxFlat_poavc")
theme_override_styles/normal = SubResource("StyleBoxFlat_2bk0l")
editable = false

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="SubmitButton" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_ok0bp")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = ExtResource("7_6gi3p")
theme_override_styles/disabled = SubResource("StyleBoxFlat_owong")
theme_override_styles/hover = ExtResource("7_6gi3p")
theme_override_styles/pressed = ExtResource("7_6gi3p")
theme_override_styles/normal = ExtResource("7_6gi3p")
text = "SUBMIT"

[node name="BackButton" type="TextureButton" parent="Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 85)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0351852
anchor_top = 0.0260417
anchor_right = 0.164815
anchor_bottom = 0.114583
texture_normal = ExtResource("4_ok0bp")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[node name="ChoosePhotoModal" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ChoosePhotoModal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ChoosePhotoModal/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="ChoosePhotoModal/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_idi3j")

[node name="OptionsContainer" type="VBoxContainer" parent="ChoosePhotoModal/Panel/VBoxContainer/Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.5
offset_top = -209.0
offset_right = 179.5
offset_bottom = 430.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ChoosePhotoModal/Panel/VBoxContainer/Panel/OptionsContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="Panel2" type="Panel" parent="ChoosePhotoModal/Panel/VBoxContainer/Panel/OptionsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_abi7b")

[node name="ImageCaptureButton" type="TextureButton" parent="ChoosePhotoModal/Panel/VBoxContainer/Panel/OptionsContainer/VBoxContainer/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ChoosePhotoModal/Panel/VBoxContainer/Panel/OptionsContainer/VBoxContainer/Panel2/ImageCaptureButton"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0705882
anchor_right = 1.0
anchor_bottom = 0.776471
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_n2r1i")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ChoosePhotoModal/Panel/VBoxContainer/Panel/OptionsContainer/VBoxContainer/Panel2/ImageCaptureButton"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -61.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("8_poavc")
theme_override_font_sizes/font_size = 25
text = "TAKE A PICTURE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel3" type="Panel" parent="ChoosePhotoModal/Panel/VBoxContainer/Panel/OptionsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_abi7b")

[node name="ChooseImageButton" type="TextureButton" parent="ChoosePhotoModal/Panel/VBoxContainer/Panel/OptionsContainer/VBoxContainer/Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="ChoosePhotoModal/Panel/VBoxContainer/Panel/OptionsContainer/VBoxContainer/Panel3/ChooseImageButton"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0705882
anchor_right = 1.0
anchor_bottom = 0.776471
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_6gi3p")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="ChoosePhotoModal/Panel/VBoxContainer/Panel/OptionsContainer/VBoxContainer/Panel3/ChooseImageButton"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -61.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_fonts/font = ExtResource("8_poavc")
theme_override_font_sizes/font_size = 25
text = "CHOOSE PICTURE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="ChoosePhotoModal/Panel/VBoxContainer/Panel"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -164.0
offset_top = -820.0
offset_right = 164.0
offset_bottom = -760.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.133196, 0.133196, 0.133196, 1)
theme_override_fonts/font = ExtResource("1_f683r")
theme_override_font_sizes/font_size = 32
text = "Choose photo"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="ChoosePhotoModal/Panel"]
custom_minimum_size = Vector2(70, 85)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0351852
anchor_top = 0.0260417
anchor_right = 0.164815
anchor_bottom = 0.114583
texture_normal = ExtResource("4_ok0bp")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer/Panel/UploadPictureButton" to="." method="_on_upload_picture_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/VBoxContainer/VBoxContainer2/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ChoosePhotoModal/Panel/VBoxContainer/Panel/OptionsContainer/VBoxContainer/Panel2/ImageCaptureButton" to="." method="_on_image_capture_button_pressed"]
[connection signal="pressed" from="ChoosePhotoModal/Panel/VBoxContainer/Panel/OptionsContainer/VBoxContainer/Panel3/ChooseImageButton" to="." method="_on_choose_image_button_pressed"]
